@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix bug #3018536: duplication of items in containers.
+Correctly free the removed item's inventory.
+Also fix invalid carrying field.
+Nicolas Weeger 2010-08-01
+
 Remove deprecated function.
 Nicolas Weeger 2010-08-01
 
